welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:18: error: not found: value LitMessage
  } else if(LitMessage()=='I') {
            ^